--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "axios": "^1.7.9",
     "dayjs": "^1.11.18",
     "formik": "^2.4.6",
+    "framer-motion": "^12.23.24",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.0.2",
